optimize: restore performance optimizations while keeping deployment working
- Only force dynamic rendering for pages that need useSearchParams
- Restore static generation for privacy/terms pages
- Optimize package imports for better bundle size
- Set Hong Kong region for better performance in Asia
- Keep essential ESLint rules as warnings instead of errors
- Remove global dynamic rendering that was hurting performance

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
-  "buildCommand": "npm run build:vercel",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "functions": {
+    "app/api/**": {
+      "runtime": "nodejs18.x",
+      "maxDuration": 10
+    }
+  },
+  "regions": ["hkg1"],
+  "crons": []
 }
